      you will be able to seek, but you might get ear- and speaker-breaking
      noises)

    Demuxers:
    * simultaneous audio capture and playback in MPlayer
      (-tv immediatemode=0) fixed in v4l2
    * PVR support
    * AAC ADTS demuxer
    * libdvdread updated to v0.9.4

    Streaming:
    * fix streaming of RealAudio files over HTTP

    FFmpeg/libavcodec:
    * Snow bug fixes and speedup
    * MPEG-1/2 decoder speedup
    * Indeo2 video decoder
    * Fraps video decoder (v0 & v1)
    * Vorbis audio decoder
    * RV20 fixes
    * VP3 decoder fixes and speedup
    * countless bug fixes all over the place
    * vstrict=-1 is default, Snow, ffv1 etc. need vstrict=-2

    Filters:
    * much faster version of spp filter (-vf fspp), and pp7 ("fast spp=6").
    * remove_logo filter
    * lavcresample is now used by default (use -af-adv force=0 for old
      behaviour).

    MEncoder:
    * audio encoding modularized
    * AAC (FAAC) audio encoding
    * border processing adaptive quantization in libavcodec
    * XviD's encoding zones and luminance masking
    * raw audio muxer
    * fixed various bugs in the EDL code
    * x264 "turbo mode" to speed up first pass of multi-pass encoding

    Ports:
    * improved timer function on Mac OS X
    * New Mac OS X "macosx" video output driver. Supported on OS X 10.4
      and 10.3 with QuickTime 7 (requires QuickTime 7 SDK to build on 10.3)
    * Mac OS X 10.4 (Tiger) fixes
    * macosx audio output driver fixes
    * support for playing DVDs from the hard disk on Cygwin
    * DragonFly BSD support

    Others:
    * enabled hinting for TrueType fonts
    * support for file:// syntax
    * -fb option removed, use the device suboption of -vo fbdev/fbdev2 instead
    * massive stream layer cleanup, all streams ported to the new API
    * full gcc 4 support for IA-32 and AMD-64 ports
    * TOOLS/vobshift.py: vobsub time-adjust tool