@@ -34,6 +34,8 @@ MPlayer (1.0)
 
     Streaming:
     * fix streaming of RealAudio files over HTTP
+    * show SHOUT/Icecast metadata while playing
+    * ultravox (unsv://) streaming support
 
     FFmpeg/libavcodec:
     * Snow bug fixes and speedup
